Update ContextMenuItemBuilder.java